plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'backend'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.session:spring-session-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'io.github.cdimascio:dotenv-java:3.2.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	//json serialization
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.apache.commons:commons-pool2:2.11.1'
	implementation 'io.lettuce:lettuce-core:6.5.5.RELEASE'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.4'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.4'

}

tasks.named('test') {
	useJUnitPlatform()
}
